samples/_failures_safe/1761548747_394bca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_84352e8a.c: In function ‘main’:
./samples/SAFE/__tmp_84352e8a.c:164:12: error: missing terminating " character
  164 |     printf("Success: Compression and decompression verified\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_84352e8a.c:164:5: error: expected expression at end of input
  164 |     printf("Success: Compression and decompression verified\n
      |     ^~~~~~
./samples/SAFE/__tmp_84352e8a.c:164:5: error: expected declaration or statement at end of input
